added navbar section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    hello me
+    <header>
+        <div class="navbar-section">
+            <div class="logo-navbar">
+                <img class="logo-img" src="images/Frame.png" alt="">
+                <h4><span class="G-style">G</span>amer</h4>
+            </div>
+
+            <div class="btn-navbar">
+                <ul>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Developers</a></li>
+                    <li><a href="">Follow Us On</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="banner-container">
+            <div class="banner-info">
+                <p class="banner-text">Play Like The</p>
+                <p class="banner-title">G.O.A.T.</p>
+                <p class="primary-description">1-Click instant play</p>
+                <p class="primary-description">No Download</p>
+                <p class="primary-description">1000s of supported online games</p>
+                <button class="banner-btn">Sign In</button>
+                <button class="banner-btn1">Go Rogue</button>
+            </div>
+            <div class="banner-img">
+                <img src="images/Group 18.png" alt="">
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="funny-videos-section">
+            <div class="funny-videos-info">
+                <h2 class="funny-videos-title">Online Games Funny Videos</h2>
+                <p class="funny-videos-description">A Collection of Hilarious Videos to Brighten Your Day</p>
+            </div>
+            <div class="funny-videos-img">
+                <div>
+                    <img class="funny-img" src="images/Rectangle 4.png" alt="">
+                    <p class="primary-description">N o Download. No Installs. Play games Instantly on Game r.</p>
+                </div> 
+                <div> 
+                    <img  class="funny-img" src="images/Rectangle 5.png" alt="">
+                    <p class="primary-description">D id you score? #unblockedgames #school</p>
+                </div> 
+                <div> 
+                    <img  class="funny-img" src="images/Rectangle 7.png" alt="">
+                    <p class="primary-description">B reaking game records like OG</p>
+                </div> 
+                <div> 
+                    <img  class="funny-img" src="images/Rectangle 6.png" alt="">
+                    <p class="primary-description">Busted gaming on school laptop, but you are still lit.</p>
+                </div>
+            </div>
+        </div>
+        <div class="play-game-secton">
+            <div class="play-game-img">
+                <div class="game-img"><img src="images/Rectangle 67.png" alt="">
+                    <div class="game-img1"><img src="images/Rectangle 78.png" alt=""></div>
+                </div>
+            </div>
+            <div class="play-game-info">
+                <h2>Play Games Online Anywhere, Anytime!</h2>
+                <p>PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online for free, any time, anywhere , on any device.</p>
+            </div>
+        </div>
+        <div class="btn-section">54r
+            <button class="btn">
+                <img src="images/Rectangle 11.png" alt=""> Action Games
+            </button>
+            <button class="btn">
+                <img src="images/Rectangle 12.png" alt=""> Adventure Games
+            </button>
+            <button class="btn">
+                <img src="images/Rectangle 13.png" alt=""> Arcade Games
+            </button>
+            <button class="btn">
+                <img src="images/Rectangle 14.png" alt=""> Educational Games
+            </button>
+            <button class="btn">
+                <img src="images/Rectangle 15.png" alt=""> Word Games
+            </button>
+            <button class="btn">
+                <img src="images/Rectangle 16.png" alt=""> Role Palying Games
+            </button>
+            <button class="btn">
+                <img src="images/Rectangle 17.png" alt=""> Music & Audio Games
+            </button>
+            <button class="btn">
+                <img src="images/Rectangle 18.png" alt=""> Puzzle Games
+            </button>
+            <button class="btn">
+                <img src="images/Rectangle 19.png" alt=""> Strategy Games
+            </button>
+        </div>
+    </main>
+    <footer>
+        <div class="footer">
+            <div class="logo-navbar">
+                <img class="logo-img" src="images/Frame.png" alt="">
+                <h4><span class="G-style">G</span>amer</h4>
+            </div>
+            <div class="footer-title">
+                <p>Our Story</p>
+                <p>Games</p>
+                <p>Web Games</p>
+                <p>Careers</p>
+                <p>Support</p>
+                <p>My Account</p>
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
