added banner section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </div>
         <div class="banner-container">
             <div class="banner-info">
+                <div class="back-img"></div>
                 <p class="banner-text">Play Like The</p>
                 <p class="banner-title">G.O.A.T.</p>
                 <p class="primary-description">1-Click instant play</p>
@@ -47,28 +48,32 @@
     <main>
         <div class="funny-videos-section">
             <div class="funny-videos-info">
-                <h2 class="funny-videos-title">Online Games Funny Videos</h2>
+                <h2 class="funny-videos-title">Online Games <span class="funny-title">Funny Videos</span></h2>
                 <p class="funny-videos-description">A Collection of Hilarious Videos to Brighten Your Day</p>
             </div>
-            <div class="funny-videos-img">
-                <div>
-                    <img class="funny-img" src="images/Rectangle 4.png" alt="">
-                    <p class="primary-description">N o Download. No Installs. Play games Instantly on Game r.</p>
-                </div> 
-                <div> 
-                    <img  class="funny-img" src="images/Rectangle 5.png" alt="">
-                    <p class="primary-description">D id you score? #unblockedgames #school</p>
-                </div> 
-                <div> 
-                    <img  class="funny-img" src="images/Rectangle 7.png" alt="">
-                    <p class="primary-description">B reaking game records like OG</p>
-                </div> 
-                <div> 
-                    <img  class="funny-img" src="images/Rectangle 6.png" alt="">
-                    <p class="primary-description">Busted gaming on school laptop, but you are still lit.</p>
-                </div>
+            <div class="funny-videos-content">
+                <div class="funny-videos-img">
+                    <div class="funny-img-content">
+                        <img class="funny-img" src="images/Rectangle 4.png" alt="">
+                        <p class="primary-description">N o Download. No Installs. Play games Instantly on Game r.</p>
+                    </div> 
+                    <div  class="funny-img-content"> 
+                        <img  class="funny-img" src="images/Rectangle 5.png" alt="">
+                        <p class="primary-description">D id you score? #unblockedgames #school</p>
+                    </div> 
+                    <div  class="funny-img-content"> 
+                        <img  class="funny-img" src="images/Rectangle 7.png" alt="">
+                        <p class="primary-description">Breaking game records like OG</p>
+                    </div> 
+                    <div  class="funny-img-content"> 
+                        <img  class="funny-img" src="images/Rectangle 6.png" alt="">
+                        <p class="primary-description">Busted gaming on school laptop, but you are still lit.</p>
+                    </div>
             </div>
         </div>
+
+
+
         <div class="play-game-secton">
             <div class="play-game-img">
                 <div class="game-img"><img src="images/Rectangle 67.png" alt="">
@@ -76,11 +81,15 @@
                 </div>
             </div>
             <div class="play-game-info">
-                <h2>Play Games Online Anywhere, Anytime!</h2>
-                <p>PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online for free, any time, anywhere , on any device.</p>
+                <h2 class="game-title"><span class="funny-title">Play Games Online</span> Anywhere, Anytime!</h2>
+                <p class="play-game-description">PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online for free, any time, anywhere , on any device.</p>
             </div>
         </div>
-        <div class="btn-section">54r
+
+
+
+
+        <div class="btn-section">
             <button class="btn">
                 <img src="images/Rectangle 11.png" alt=""> Action Games
             </button>
@@ -110,7 +119,10 @@
             </button>
         </div>
     </main>
-    <footer>
+
+
+
+    <!--  <footer>
         <div class="footer">
             <div class="logo-navbar">
                 <img class="logo-img" src="images/Frame.png" alt="">
@@ -125,7 +137,7 @@
                 <p>My Account</p>
             </div>
         </div>
-    </footer>
+    </footer> -->
 </body>
 
 </html>
