added funny videos section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="images/Frame.png" type="image/x-icon">
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -46,35 +47,39 @@
         </div>
     </header>
     <main>
-        <div class="funny-videos-section">
+        <div class="funny-video-section">
+
+
             <div class="funny-videos-info">
                 <h2 class="funny-videos-title">Online Games <span class="funny-title">Funny Videos</span></h2>
                 <p class="funny-videos-description">A Collection of Hilarious Videos to Brighten Your Day</p>
             </div>
+
+
+
             <div class="funny-videos-content">
-                <div class="funny-videos-img">
-                    <div class="funny-img-content">
-                        <img class="funny-img" src="images/Rectangle 4.png" alt="">
-                        <p class="primary-description">N o Download. No Installs. Play games Instantly on Game r.</p>
-                    </div> 
-                    <div  class="funny-img-content"> 
-                        <img  class="funny-img" src="images/Rectangle 5.png" alt="">
-                        <p class="primary-description">D id you score? #unblockedgames #school</p>
-                    </div> 
-                    <div  class="funny-img-content"> 
-                        <img  class="funny-img" src="images/Rectangle 7.png" alt="">
-                        <p class="primary-description">Breaking game records like OG</p>
-                    </div> 
-                    <div  class="funny-img-content"> 
-                        <img  class="funny-img" src="images/Rectangle 6.png" alt="">
-                        <p class="primary-description">Busted gaming on school laptop, but you are still lit.</p>
-                    </div>
+                <div class="funny-img-content">
+                    <img class="funny-img" src="images/Rectangle 4.png" alt="">
+                    <p class="primary-description">No Download. No Installs. Play games Instantly on Game r.</p>
+                </div> 
+                <div  class="funny-img-content"> 
+                    <img  class="funny-img" src="images/Rectangle 5.png" alt="">
+                    <p class="primary-description">Did you score? #unblockedgames #school </p>
+                </div> 
+                <div  class="funny-img-content"> 
+                    <img  class="funny-img" src="images/Rectangle 7.png" alt="">
+                    <p class="primary-description">Breaking game records like OG</p>
+                </div> 
+                <div  class="funny-img-content"> 
+                    <img  class="funny-img" src="images/Rectangle 6.png" alt="">
+                    <p class="primary-description">Busted gaming on school laptop, but you are still lit.</p>
+                </div>
             </div>
         </div>
 
 
 
-        <div class="play-game-secton">
+         <div class="play-game-secton">
             <div class="play-game-img">
                 <div class="game-img"><img src="images/Rectangle 67.png" alt="">
                     <div class="game-img1"><img src="images/Rectangle 78.png" alt=""></div>
@@ -89,44 +94,49 @@
 
 
 
-        <div class="btn-section">
-            <button class="btn">
-                <img src="images/Rectangle 11.png" alt=""> Action Games
-            </button>
-            <button class="btn">
-                <img src="images/Rectangle 12.png" alt=""> Adventure Games
-            </button>
-            <button class="btn">
-                <img src="images/Rectangle 13.png" alt=""> Arcade Games
-            </button>
-            <button class="btn">
-                <img src="images/Rectangle 14.png" alt=""> Educational Games
-            </button>
-            <button class="btn">
-                <img src="images/Rectangle 15.png" alt=""> Word Games
-            </button>
-            <button class="btn">
-                <img src="images/Rectangle 16.png" alt=""> Role Palying Games
-            </button>
-            <button class="btn">
-                <img src="images/Rectangle 17.png" alt=""> Music & Audio Games
-            </button>
-            <button class="btn">
-                <img src="images/Rectangle 18.png" alt=""> Puzzle Games
-            </button>
-            <button class="btn">
-                <img src="images/Rectangle 19.png" alt=""> Strategy Games
-            </button>
+        <div class="btn-container">
+            <div class="btn-content">
+                <button class="btn">
+                    <img src="images/Rectangle 11.png" alt=""> Action Games
+                </button>
+                <button class="btn">
+                    <img src="images/Rectangle 12.png" alt=""> Adventure Games
+                </button>
+                <button class="btn">
+                    <img src="images/Rectangle 13.png" alt=""> Arcade Games
+                </button>
+                <button class="btn">
+                    <img src="images/Rectangle 14.png" alt=""> Educational Games
+                </button>
+                <button class="btn">
+                    <img src="images/Rectangle 15.png" alt=""> Word Games
+                </button>
+            </div>
+            <div class="btn-content1">
+                <button class="btn">
+                    <img src="images/Rectangle 16.png" alt=""> 
+                    <p>Role Palying Games</p>
+                </button>
+                <button class="btn">
+                    <img src="images/Rectangle 17.png" alt=""> Music & Audio Games
+                </button>
+                <button class="btn">
+                    <img src="images/Rectangle 18.png" alt=""> Puzzle Games
+                </button>
+                <button class="btn">
+                    <img src="images/Rectangle 19.png" alt=""> Strategy Games
+                </button>
+            </div>
         </div>
     </main>
 
 
 
-    <!--  <footer>
+     <footer>
         <div class="footer">
-            <div class="logo-navbar">
+            <div class="logo-navbar-1">
                 <img class="logo-img" src="images/Frame.png" alt="">
-                <h4><span class="G-style">G</span>amer</h4>
+                <h4><span class="G-style-1">G</span>amer</h4>
             </div>
             <div class="footer-title">
                 <p>Our Story</p>
@@ -136,8 +146,17 @@
                 <p>Support</p>
                 <p>My Account</p>
             </div>
+            <div class="footer-title-1">
+                <p>Terms and Conditions</p>
+                <p>Privacy Policy</p>
+                <p>Cookie Policy</p>
+                <p>Privacy Settings</p>
+            </div>
+            <div class="footer-copyright">
+                <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+            </div>
         </div>
-    </footer> -->
+    </footer>
 </body>
 
 </html>
