added online games section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" href="images/Frame.png" type="image/x-icon">
 
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/bc436b3cc3.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -26,7 +27,7 @@
                 <ul>
                     <li><a href="">About Us</a></li>
                     <li><a href="">Developers</a></li>
-                    <li><a href="">Follow Us On</a></li>
+                    <li><a href="">Follow Us On<i " class="fa-brands fa-youtube a"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -93,41 +94,44 @@
 
 
 
-
-        <div class="btn-container">
-            <div class="btn-content">
-                <button class="btn">
-                    <img src="images/Rectangle 11.png" alt=""> Action Games
-                </button>
-                <button class="btn">
-                    <img src="images/Rectangle 12.png" alt=""> Adventure Games
-                </button>
-                <button class="btn">
-                    <img src="images/Rectangle 13.png" alt=""> Arcade Games
-                </button>
-                <button class="btn">
-                    <img src="images/Rectangle 14.png" alt=""> Educational Games
-                </button>
-                <button class="btn">
-                    <img src="images/Rectangle 15.png" alt=""> Word Games
-                </button>
-            </div>
-            <div class="btn-content1">
-                <button class="btn">
+            <div class="btn-container">
+                <div class="btn">
+                    <img src="images/Rectangle 11.png" alt=""> 
+                    <p>Action Games</p>
+                </div>
+                <div class="btn">
+                    <img src="images/Rectangle 12.png" alt="">
+                    <p>Adventure Games</p> 
+                </div>
+                <div class="btn">
+                    <img src="images/Rectangle 13.png" alt=""> 
+                    <p>Arcade Games</p>
+                </div>
+                <div class="btn">
+                    <img src="images/Rectangle 14.png" alt=""> 
+                    <p>Educational Games</p>
+                </div>
+                <div class="btn">
+                    <img src="images/Rectangle 15.png" alt=""> 
+                    <p>Word Games</p>
+                </div>
+                <div class="btn">
                     <img src="images/Rectangle 16.png" alt=""> 
                     <p>Role Palying Games</p>
-                </button>
-                <button class="btn">
-                    <img src="images/Rectangle 17.png" alt=""> Music & Audio Games
-                </button>
-                <button class="btn">
-                    <img src="images/Rectangle 18.png" alt=""> Puzzle Games
-                </button>
-                <button class="btn">
-                    <img src="images/Rectangle 19.png" alt=""> Strategy Games
-                </button>
+                </div>
+                <div class="btn">
+                    <img src="images/Rectangle 17.png" alt=""> 
+                    <p>Music & Audio Games</p>
+                </div>
+                <div class="btn">
+                    <img src="images/Rectangle 18.png" alt=""> 
+                    <p>Puzzle Games</p>
+                </div>
+                <div class="btn">
+                    <img src="images/Rectangle 19.png" alt=""> 
+                    <p>Strategy Games</p>
+                </div>
             </div>
-        </div>
     </main>
 
 
@@ -151,6 +155,15 @@
                 <p>Privacy Policy</p>
                 <p>Cookie Policy</p>
                 <p>Privacy Settings</p>
+            </div>
+            <div class="footer-icon">
+
+                    <i style="color: white;" class="fa-brands fa-twitter"></i>
+                    <i style="color: white;" class="fa-brands fa-facebook"></i>
+                    <i style="color: white;" class="fa-brands fa-youtube"></i>
+                    <i style="color: white;" class="fa-brands fa-linkedin"></i>
+                    <i style="color: white;" class="fa-brands fa-instagram"></i>
+                    <i style="color: white;" class="fa-brands fa-apple"></i>
             </div>
             <div class="footer-copyright">
                 <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
