added button section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <ul>
                     <li><a href="">About Us</a></li>
                     <li><a href="">Developers</a></li>
-                    <li><a href="">Follow Us On<i " class="fa-brands fa-youtube a"></i></a></li>
+                    <li><a href="">Follow Us On</a></li>
                 </ul>
             </div>
         </div>
