added navbar icon

--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
                 <ul>
                     <li><a href="">About Us</a></li>
                     <li><a href="">Developers</a></li>
-                    <li><a href="">Follow Us On</a></li>
+                    <div class="y-icon">
+                        <li><a href="">Follow Us On</a> 
+                            <div class="youtube-icon">
+                                <i class="fa-brands fa-youtube youtube-icon"></i>
+                                <i class="fa-brands fa-tiktok tiktok-icon"></i>
+                            </div>
+                        </li>
+                    </div>
                 </ul>
             </div>
         </div>
