added navbar tiktok icon

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <div class="y-icon">
                         <li><a href="">Follow Us On</a> 
                             <div class="youtube-icon">
-                                <i class="fa-brands fa-youtube youtube-icon"></i>
-                                <i class="fa-brands fa-tiktok tiktok-icon"></i>
+                                <i class="fa-brands fa-youtube y-icon"></i>
+                                <i class="fa-brands fa-tiktok t-icon"></i>
                             </div>
                         </li>
                     </div>
