added footer section

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 <ul>
                     <li><a href="">About Us</a></li>
                     <li><a href="">Developers</a></li>
-                    <div class="y-icon">
+                    <div class="youtube-tiktok-icon">
                         <li><a href="">Follow Us On</a> 
-                            <div class="youtube-icon">
+                            <div class="y-t-icon">
                                 <i class="fa-brands fa-youtube y-icon"></i>
                                 <i class="fa-brands fa-tiktok t-icon"></i>
                             </div>
