added footer icon

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <body>
     <header>
+        <!-- NAVBAR SECTION STARTED -->
         <div class="navbar-section">
             <div class="logo-navbar">
                 <img class="logo-img" src="images/Frame.png" alt="">
@@ -38,6 +39,11 @@
                 </ul>
             </div>
         </div>
+        <!-- NAVBAR SECTION FINISHED -->
+
+
+        
+        <!-- BANNER SECTION STARTED -->
         <div class="banner-container">
             <div class="banner-info">
                 <div class="back-img"></div>
@@ -53,22 +59,19 @@
                 <img src="images/Group 18.png" alt="">
             </div>
         </div>
+         <!-- BANNER SECTION FINISHED -->
     </header>
     <main>
+        <!-- FUNNY VIDEOS SECTION STARTED -->
         <div class="funny-video-section">
-
-
             <div class="funny-videos-info">
                 <h2 class="funny-videos-title">Online Games <span class="funny-title">Funny Videos</span></h2>
                 <p class="funny-videos-description">A Collection of Hilarious Videos to Brighten Your Day</p>
             </div>
-
-
-
             <div class="funny-videos-content">
                 <div class="funny-img-content">
                     <img class="funny-img" src="images/Rectangle 4.png" alt="">
-                    <p class="primary-description">No Download. No Installs. Play games Instantly on Game r.</p>
+                    <p class="primary-description">No Download. No Installs. Play games Instantly on Gamer.</p>
                 </div> 
                 <div  class="funny-img-content"> 
                     <img  class="funny-img" src="images/Rectangle 5.png" alt="">
@@ -84,9 +87,11 @@
                 </div>
             </div>
         </div>
+         <!-- FUNNY VIDEOS SECTION FINISHED -->
+    
 
 
-
+        <!-- PLAY GAME SECTION STARTED -->
          <div class="play-game-secton">
             <div class="play-game-img">
                 <div class="game-img"><img src="images/Rectangle 67.png" alt="">
@@ -98,9 +103,10 @@
                 <p class="play-game-description">PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online for free, any time, anywhere , on any device.</p>
             </div>
         </div>
+        <!-- PLAY GAME SECTION FINISHED -->
 
 
-
+            <!-- BUTTON SECTION STARTED -->
             <div class="btn-container">
                 <div class="btn">
                     <img src="images/Rectangle 11.png" alt=""> 
@@ -139,11 +145,10 @@
                     <p>Strategy Games</p>
                 </div>
             </div>
+             <!-- BUTTON SECTION FINISHED -->
     </main>
-
-
-
-     <footer>
+    <footer>
+        <!-- FOOTER SECTION STARTED -->
         <div class="footer">
             <div class="logo-navbar-1">
                 <img class="logo-img" src="images/Frame.png" alt="">
@@ -176,6 +181,7 @@
                 <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
             </div>
         </div>
+         <!-- FOOTER SECTION FINISHED -->
     </footer>
 </body>
 
