funny videos responsive

--- a/index.html
+++ b/index.html
@@ -150,35 +150,37 @@
     <footer>
         <!-- FOOTER SECTION STARTED -->
         <div class="footer">
-            <div class="logo-navbar-1">
-                <img class="logo-img" src="images/Frame.png" alt="">
-                <h4><span class="G-style-1">G</span>amer</h4>
-            </div>
-            <div class="footer-title">
-                <p>Our Story</p>
-                <p>Games</p>
-                <p>Web Games</p>
-                <p>Careers</p>
-                <p>Support</p>
-                <p>My Account</p>
-            </div>
-            <div class="footer-title-1">
-                <p>Terms and Conditions</p>
-                <p>Privacy Policy</p>
-                <p>Cookie Policy</p>
-                <p>Privacy Settings</p>
-            </div>
-            <div class="footer-icon">
-
-                    <i style="color: white;" class="fa-brands fa-twitter"></i>
-                    <i style="color: white;" class="fa-brands fa-facebook"></i>
-                    <i style="color: white;" class="fa-brands fa-youtube"></i>
-                    <i style="color: white;" class="fa-brands fa-linkedin"></i>
-                    <i style="color: white;" class="fa-brands fa-instagram"></i>
-                    <i style="color: white;" class="fa-brands fa-apple"></i>
-            </div>
-            <div class="footer-copyright">
-                <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+            <div class="footer-info">
+                <div class="logo-navbar-1">
+                    <img class="logo-img" src="images/Frame.png" alt="">
+                    <h4><span class="G-style-1">G</span>amer</h4>
+                </div>
+                <div class="footer-title">
+                    <p>Our Story</p>
+                    <p>Games</p>
+                    <p>Web Games</p>
+                    <p>Careers</p>
+                    <p>Support</p>
+                    <p>My Account</p>
+                </div>
+                <div class="footer-title-1">
+                    <p>Terms and Conditions</p>
+                    <p>Privacy Policy</p>
+                    <p>Cookie Policy</p>
+                    <p>Privacy Settings</p>
+                </div>
+                <div class="footer-icon">
+    
+                        <i style="color: white;" class="fa-brands fa-twitter"></i>
+                        <i style="color: white;" class="fa-brands fa-facebook"></i>
+                        <i style="color: white;" class="fa-brands fa-youtube"></i>
+                        <i style="color: white;" class="fa-brands fa-linkedin"></i>
+                        <i style="color: white;" class="fa-brands fa-instagram"></i>
+                        <i style="color: white;" class="fa-brands fa-apple"></i>
+                </div>
+                <div class="footer-copyright">
+                    <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+                </div>
             </div>
         </div>
          <!-- FOOTER SECTION FINISHED -->
